--- a/config/.env.exemple
+++ b/config/.env.exemple
@@ -1,3 +1,3 @@
 PORT=3000
-DB_USER_PASSWORD='jabbar:jabbar'
+DB_USER_PASSWORD='your database uesername:your database password'
 TOKEN_SECRET= 'votre phrase de cle secret'
